--- a/css/header.css
+++ b/css/header.css
@@ -1,29 +1,46 @@
 header {
 	width: 100%;
-	height: 100px;
+	height: 120px;
 	position: absolute;
 }
 
 .navbar {
 	width: 100%;
-	height: 100px;
+	height: 120px;
 	transition: all .4s linear;
 }
 
 .fluid-logo {
-	width: 24%;
+	width: 19%;
 	float: left;
-	padding-top: 40px;
-}
-
-.fluid-logo a {
-	font-family: 'Roboto';
-	font-size: 1.6em;
-	font-weight: 700;
-	text-transform: uppercase;
-	color: #fff;
+	padding-top: 49px;
 }
 
 .fluid-logo .logo-blue {
 	color: #24a1fd;
+}
+
+@media only screen and (max-width: 600px) {
+	.fluid-logo {
+		width: 46%;
+		padding-top: 42px;
+	}
+}
+
+@media only screen and (min-width: 600px) {
+	.fluid-logo {
+		width: 34%;
+	}
+}
+
+@media only screen and (min-width: 992px) {
+	.fluid-logo {
+	width: 28%;
+}
+}
+
+@media only screen and (min-width: 1200px) {
+	.fluid-logo {
+	width: 22%;
+}
 }
