Menu off canvas added

--- a/css/reset.css
+++ b/css/reset.css
@@ -1,4 +1,10 @@
-* { margin: 0; padding: 0; }
+* { 
+    margin: 0; 
+    padding: 0; 
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing:: border-box;
+    box-sizing: border-box;
+}
 
 html, body {
     height: 100%;
@@ -40,8 +46,8 @@ button {
 
 .fluid-container {
     position: absolute;
-    left: 70px;
-    right: 70px;
+    left: 60px;
+    right: 60px;
     margin: 0 auto;
 }
 
