--- a/css/header.css
+++ b/css/header.css
@@ -2,27 +2,190 @@ header {
 	width: 100%;
 	height: 120px;
 	position: absolute;
+	z-index: 1;
 }
 
 .navbar {
 	width: 100%;
 	height: 120px;
 	transition: all .4s linear;
+	z-index: 1;
 }
 
 .fluid-logo {
 	width: 19%;
 	float: left;
 	padding-top: 49px;
+	z-index: 9999;
 }
 
-.fluid-logo .logo-blue {
+.fullscreen-menu {
+	position: relative;
+	width: 100%;
+	background: #333;
+}
+
+#wrapper-nav {
+	position: relative;
+	overflow: hidden;
+	width: 100%;
+	height: 100%;
+	z-index: 1;
+}
+
+#main {
+	width: 100%;
+	height: 100%;
+	position: relative;
+	-webkit-transform: translateX(250px);
+	transform: translateX(250px);
+	-webkit-transform: translate3d(250px,0,0);
+	transform: translate3d(250px,0,0);
+	-webkit-transition: 300ms ease all;
+	transition: 300ms ease all;
+	-webkit-backface-visibility: hidden;
+	backface-visibility: hidden;
+}
+
+.show-nav #main {
+	-webkit-transform: translateX(0);
+	transform: translateX(0);
+	-webkit-transform: translate3d(0,0,0);
+	transform: translate3d(0,0,0);
+}
+
+#menu {
+	width: 250px;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	right: 0;
+	background: #12202d;
+	color: #fff;
+
+	display: -webkit-box;
+  	display: -moz-box;
+  	display: -ms-flexbox;
+  	display: -webkit-flex;
+  	display: flex;
+  
+  	-webkit-flex-flow: row wrap;
+  	flex-direction: column;
+}
+
+#menu ul {
+	margin-top: 120px;
+}
+
+#menu ul li {
+	display: -webkit-box;
+  	display: -moz-box;
+  	display: -ms-flexbox;
+  	display: -webkit-flex;
+  	display: flex;
+
+	justify-content: flex-start;
+}
+
+#menu ul li a {
+	width: 250px;
+	font-weight: 600;
+	font-size: 1.7em;
+}
+
+nav ul li a:hover {
+	background-color: #24a1fd;
+	margin-left: 6px;
+	transition: ease 300ms all;
+}
+
+.btn-responsive { 
+	width: 55px;
+	height: 46px;
+	position: absolute;
+	right: -20px;
+	top: 36px;
+	cursor: pointer;
+	z-index: 9999;
+}
+
+.btn-responsive:after {
+	position: absolute;
+	top: 22px;
+	right: 20px;
+	display: block;
+	height: 8px;
+	width: 20px;
+	border-top: 2px solid #fff;
+	border-bottom: 2px solid #fff;
+	content: ''
+}
+
+.btn-responsive:before {
+	-webkit-transition: all .3s ease;
+	-ms-transition: all .3s ease;
+	transition: all .3s ease;
+	position: absolute;
+	top: 16px;
+	right: 20px;
+	display: block;
+	height: 2px;
+	width: 20px;
+	background: #fff;
+	content: ''
+}
+
+.btn-responsive .menu-opened:after {
+	-webkit-transition: all .3s ease;
+	-ms-transition: all .3s ease;
+	transition: all .3s ease;
+	top: 23px;
+	border: 0;
+	height: 2px;
+	width: 19px;
+	background: #fff;
+	-webkit-transform: rotate(45deg);
+	-moz-transform: rotate(45deg);
+	-ms-transform: rotate(45deg);
+	-o-transform: rotate(45deg);
+	transform: rotate(45deg)
+}
+
+.btn-responsive .menu-opened:before {
+	top: 23px;
+	background: #fff;
+	width: 19px;
+	-webkit-transform: rotate(-45deg);
+	-moz-transform: rotate(-45deg);
+	-ms-transform: rotate(-45deg);
+	-o-transform: rotate(-45deg);
+	transform: rotate(-45deg)
+}
+
+.headline {
+	position: relative;
+	width: 100%;
+	top: 0;
+}
+
+.headline h1 {
+	color: #ddd;
+	font-weight: 800;
+	font-size: 4.4em;
+	line-height: 68px;
+	letter-spacing: 3px;
+	text-align: left;
+	text-transform: uppercase;
+	z-index: 2;
+}
+
+.headline span {
 	color: #24a1fd;
 }
 
 @media only screen and (max-width: 600px) {
 	.fluid-logo {
-		width: 46%;
+		width: 48%;
 		padding-top: 42px;
 	}
 }
@@ -35,12 +198,12 @@ header {
 
 @media only screen and (min-width: 992px) {
 	.fluid-logo {
-	width: 28%;
-}
+		width: 28%;
+	}
 }
 
 @media only screen and (min-width: 1200px) {
 	.fluid-logo {
-	width: 22%;
-}
+		width: 22%;
+	}
 }
