--- a/css/home/fullscreen-cover.css
+++ b/css/home/fullscreen-cover.css
@@ -1,20 +1,34 @@
 #wrapper {
-	width: 100%;
-	height: 100%;
-	position: absolute;
+    width: 100%;
+    height: 100%;
+    position: absolute;
 }
 
 #content {
-	position: absolute;
-	width: 100%;
-	height: 100%;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+.fullscreen-cover {
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    overflow: hidden;
+    position: relative;
 }
 
 .cover-image {
-	background-image: url('../../images/background.png');
-	background-position: center center;
-	background-repeat: no-repeat;
-	background-attachment: fixed;
-	background-size: cover;
-	color: #fff;
+    background-image: url('../../images/z_background.png');
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    color: #fff;
+    text-align: center;
+    width: 100%;
+    bottom: 0;
+    line-height: 0;
+    overflow: hidden;
+    height: 100%;
 }
