--- a/css/home/fullscreen-cover.css
+++ b/css/home/fullscreen-cover.css
@@ -19,7 +19,7 @@
 }
 
 .cover-image {
-    background-image: url('../../images/z_background.png');
+    background-image: url('../../images/background.png');
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
