--- a/css/home/timeline.css
+++ b/css/home/timeline.css
@@ -1,6 +1,6 @@
 .start {
   width: 100%;
-  margin-top: 110px;
+  margin-top: -620px;
   text-align: center;
 }
 
@@ -44,7 +44,7 @@
 
 .timeline ul li span {
     position: absolute;
-    top: 409px;
+    top: 359px;
     left: 7px;
     font-weight: 700;
     font-size: 1.7em;
@@ -70,7 +70,7 @@
    	transform: translateX(-50%);
    	width: 54px;
    	height: 54px;
-    top: 397px;
+    /*top: 397px;*/
    	background: #24a1fd;
    	border-radius: 50%;
     -webkit-border-radius: 50%;
@@ -90,7 +90,7 @@
 }
 
 .timeline ul .off::after {
-    top: 397px;
+    /*top: 397px;*/
 }
 
 .timeline ul .initial::after {
@@ -198,8 +198,9 @@
 }
 
 .timeline ul li:nth-child(odd) div {
-   	top: 342px;
-   	left: 96px;
+   	top: 302px;
+   	left: 112px;
+    word-wrap: break-word;
 }
 
 .timeline ul li:nth-child(odd) div::before {
@@ -210,8 +211,9 @@
 }
 
 .timeline ul li:nth-child(even) div {
-    top: 342px;
+    top: 302px;
    	left: -390px;
+    word-wrap: break-word;
 }
 
 .timeline ul li:nth-child(even) div::before {
@@ -221,29 +223,132 @@
     border-color: transparent transparent transparent #24a1fd;
 }
 
-@media only screen and (max-width: 1199px) {
+@media only screen and (min-width: 2560px) {
+  .start {
+    margin-top: -1120px;
+  }
+}
+
+@media only screen and (min-width: 1920px) {
+  .start {
+    margin-top: -840px;
+  }
+
+  .timeline ul li {
+    width: 40px;
+  }
+
+  .timeline ul .off {
+    width: 40px;
+  }
+
+  .timeline ul li::after {
+    width: 80px;
+    height: 80px;
+    top: 437px;
+  }
+
   .timeline ul li span {
-    top: 407px;
+    top: 454px;
+    left: 11px;
+    font-size: 2.5em;
+  }
+
+    .timeline ul li div {
+    width: 550px;
+    padding: 28px 48px;
+  }
+
+  .timeline ul li div h3 {
+    font-size: 3.6em;
+  }
+
+  .timeline ul li div h5 {
+    font-weight: 500;
+    font-size: 2.3em;
+  }
+
+  .timeline ul li div p {
+    font-size: 2em;
+    line-height: 40px;
+  }
+
+  .timeline ul li div .btn-see-more {
+    height: 60px;
+    padding: 0 38px 0 38px;
+    font-size: 2.2em;
+    font-weight: 600;
+    line-height: 60px;
+    margin: 30px 0 20px 205px;
+} 
+
+  .timeline ul li:nth-child(odd) div {
+    top: 392px;
+    left: 109px;
+    word-wrap: break-word;
+  }
+
+  .timeline ul li:nth-child(odd) div::before {
+    top: 9px;
+    left: -27px;
+    border-width: 25px 26px 25px 0px;
+    border-color: transparent #24a1fd transparent transparent;
+  }
+
+    .timeline ul li:nth-child(even) div {
+    top: 391px;
+    left: -620px;
+  }
+
+  .timeline ul li:nth-child(even) div::before {
+    right: -27px;
+    top: 11px;
+    border-width: 25px 0 25px 26px;
+    border-color: transparent transparent transparent #24a1fd;
+  }
+}
+
+@media only screen and (max-width: 1440px) {
+  .start {
+    margin-top: -580px;
+  }
+
+  .timeline ul li:nth-child(odd) div {
+    left: 96px;
+  }
+}
+
+@media only screen and (max-width: 1199px) {
+  .start {
+    margin-top: -560px;
+  }
+
+  .timeline ul li span {
+    top: 357px;
+  }
+
+  .timeline ul li:nth-child(odd) div {
+    left: 96px;
   }
 }
 
 @media only screen and (max-width: 992px) {
   .timeline ul li span {
-    top: 405px;
+    top: 355px;
   }
 }
 
 @media only screen and (max-width: 900px) {
   .timeline ul li::after {
-    top: 440px;
+    top: 390px;
   }
 
   .timeline ul .off::after {
-    top: 440px;
+    top: 390px;
   }
 
   .timeline ul li span {
-    top: 454px;
+    top: 404px;
   }
 
   .timeline ul li div {
@@ -252,7 +357,8 @@
 
   .timeline ul li:nth-child(odd) div {
     left: 64px;
-    top: 392px;
+    top: 342px;
+    word-wrap: break-word;
   }
 
   .timeline ul li:nth-child(odd) div::before {
@@ -261,7 +367,8 @@
 
   .timeline ul li:nth-child(even) div {
     left: -288px;
-    top: 392px;
+    top: 342px;
+    word-wrap: break-word;
   }
 
   .timeline ul li div .btn-see-more {
@@ -270,6 +377,12 @@
 }
 
 @media only screen and (max-width: 600px) {
+  .start {
+    text-align: left;
+    margin-left: 8px;
+    margin-top: -560px;
+  }
+
   .timeline ul li {
     margin-left: 10px;
   }
@@ -303,6 +416,7 @@
   .timeline ul li:nth-child(odd) div {
     left: 60px;
     top: 266px;
+    word-wrap: break-word;
   }
 
   .timeline ul li:nth-child(odd) div::before {
@@ -319,6 +433,7 @@
   .timeline ul li:nth-child(even) div {
     left: 60px;
     top: 268px;
+    word-wrap: break-word;
   }
 
   .timeline ul li:nth-child(even) div::before {
