--- a/css/footer.css
+++ b/css/footer.css
@@ -1,8 +1,8 @@
 .footer {
 	width: 100%;
 	height: 100px;
-	position: absolute;
-	background-color: rgba(20,20,38,1);
+	position: relative;
+	background-color: #171a1d;
 	bottom: 0;
 	display: -webkit-flex;
 	display: -moz-flex;
@@ -10,4 +10,21 @@
 	display: -o-flex;
 	display: flex;
 	align-items: center;
+}
+
+footer .loved {
+	font-size: 1.1em;
+	color: #fff;
+	display: -webkit-flex;
+	display: flex;
+	-webkit-flex-flow: row wrap;
+	-webkit-align-items: flex-end;
+	align-items: flex-end;
+	justify-content: center;
+}
+
+footer .fa {
+	color: #24a1fd;
+	font-size: 1.3em;
+	padding: 0 6px 0 6px;
 }
