--- a/css/page-content/page-content.css
+++ b/css/page-content/page-content.css
@@ -8,7 +8,14 @@ article {
 article h1 {
 	margin-top: 62px;
 	font-size: 2.6em;
-	color: #343434;
+	color: #444444;
+	font-weight: 500;
+}
+
+article h2 {
+	margin-top: 46px;
+	font-size: 2em;
+	color: #555555;
 	font-weight: 500;
 }
 
