--- a/css/page-content/page-content.css
+++ b/css/page-content/page-content.css
@@ -25,12 +25,18 @@ article p {
 	line-height: 25px;
 }
 
+article .first:first-letter {
+	font-size: 3em;
+	font-weight: 500;
+	margin-right: 5px;
+}
+
 .scrollTop {
     width: 50px;
     height: 50px;
     position: fixed;
-    bottom: 70px;
-    right: 70px;
+    bottom: 35px;
+    right: 35px;
     display: none;
     background-color: #24a1fd;
     z-index: 2;
