--- a/css/page-content/page-content.css
+++ b/css/page-content/page-content.css
@@ -5,10 +5,10 @@ article {
     text-align: justify;
 }
 
-article h1 {
+article h3 {
 	margin-top: 62px;
 	font-size: 2.6em;
-	color: #444444;
+	color: #333333;
 	font-weight: 500;
 }
 
@@ -31,19 +31,18 @@ article .first:first-letter {
 	margin-right: 5px;
 }
 
-article .img {
-    width: 100%;
-    height: auto;
-    display: flex;
-    justify-content: center;
+.img-data {
+    width: 70%;
+    text-align: center;
+    margin: 0 auto;
 }
 
 article img {
     margin-top: 40px;
-    margin-bottom: 40px;
+    margin-bottom: 10px;
 }
 
-.scrollTop {
+.pages-creations .scrollTop {
     width: 50px;
     height: 50px;
     position: fixed;
@@ -54,7 +53,7 @@ article img {
     z-index: 2;
 }
 
-.material-icons {
+.pages-creations .material-icons {
     color: #fff;
     font-size: 3.4em;
     margin-top: 5px;
@@ -65,4 +64,12 @@ article img {
     display: flex;
     -webkit-justify-content: center;
     justify-content: center;
+}
+
+@media only screen and (max-width: 768px) {
+    .img-data {
+        width: 100%;
+        text-align: center;
+        margin: 0 auto;
+    }
 }
